rgbds-0.6.1/test/asm/label-redefinition.err
error: label-redefinition.asm(7):
    'Sym' already defined at label-redefinition.asm(6) -> label-redefinition.asm::m(4)
error: Assembly aborted (1 error)!
