rgbds-0.6.1/test/asm/label-redefinition.asm
SECTION "sec", ROM0
    dw Sym
MACRO m
Sym::
ENDM
    m
Sym::
